[package]
name = "slip-diff"
version = "0.1.0"
edition = "2021"
author = "Hemosphere"
email = "h3mosphere@proton.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
similar = "2.2"
console = "0.15"
tempfile = "3.8"
crossterm = "0.27"
ratatui = "0.23"
rand = "0.8"
